--- a/PCComponentSelector/app/src/main/res/values/strings.xml
+++ b/PCComponentSelector/app/src/main/res/values/strings.xml
@@ -30,5 +30,13 @@
     <string name="title_activity_ramhelp">RAMHelp</string>
     <string name="title_activity_case_fan_help">CaseFanHelp</string>
     <string name="title_activity_cpucooler_help">CPUCoolerHelp</string>
+    <string name="title_activity_periphals">Periphals</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 
 </resources>
